# ostium-social-volatility-research

./: .env.example  .gitignore  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml
configs/: study.oil-hormuz.example.yaml
dashboard/: index.html
docs/: adapt-study.md  agent-runbook.md  command-surface.md  data-contracts.md  phase2-command-surface.md  phase2-data-contracts.md  phase2-pipeline-cleanup-audit.md  pipeline-cleanup-audit.md  publication-checklist.md  reproducibility.md  source-smoke-test-2026-05-11.md
prompts/: adapt-study.md  interpret-results.md  reproduce-cached-study.md
reports/: ostium-oil-hormuz-all-posts-event-table.csv  ostium-oil-hormuz-all-posts-v1_1.md  ostium-oil-hormuz-event-study-v1_2.csv  ostium-oil-hormuz-event-study-v1_2.md  ostium-oil-hormuz-event-study-v1_3.csv  ostium-oil-hormuz-post-time-scratch-check-v1_2.md  ostium-oil-hormuz-v1.md  ostium-oil-hormuz-volatility-control-v1_4.md  ostium-social-volatility-figure-table-spec.md  ostium-social-volatility-methodology-appendix.md  ostium-social-volatility-public-report-draft.md  ostium-social-volatility-research-report-v1.md
scripts/: build_dashboard_data.py  collect_activity_windows.mjs  collect_all_post_activity_windows.mjs  collect_event_study_activity_windows.mjs  collect_volatility_control_activity_windows.mjs  run_all_posts_report.py  run_event_study_report.py  run_oil_hormuz_report.py  run_volatility_control_report.py  smoke_ostium_activity.mjs  smoke_ostium_activity.py  validate_pipeline.py
tests/: test_agent_runbook.py  test_collectors_config_surface.py  (+10 more)
(+41 files in other folders)
