[project]
name = "ostium-social-volatility-backtest"
version = "0.1.0"
authors = [{ name = "Chris Lee" }]
description = "Reproducible research kit for Ostium social posts, volatility, and protocol activity"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
